--- a/style.css
+++ b/style.css
@@ -2,3 +2,71 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    font-family: sans-serif;
+    font-size: 16px;
+}
+
+img{
+    padding: 0.5em;
+    width: 10%;
+}
+
+nav{
+    background-color: red;
+    text-align: center;  
+}
+
+nav a{
+    color: white;
+    display: inline-block;
+    padding: 0.5em;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: black;
+}
+
+section{
+    height: auto;
+    float: left;
+    margin: 0 0.5em 0 0.5em;
+    width: 60%;
+}
+
+article{
+    border: 1px solid #CCC;
+    margin-top: 0.5em;
+    padding: 0.5em;
+}
+
+p{
+    text-align: justify;
+}
+
+aside{
+    background-color: #f7f7f7;
+    float: left;
+    height: auto;
+    margin-top: 0.5em;
+    padding: 1em;
+    width: 35%;
+}
+
+footer{
+    background-color: red;
+    bottom: 0;
+    float: left;
+    padding: 1em 0 1em 0;
+    position: fixed;
+    width: 100%;
+
+}
+
+footer p{
+    color: white;
+    font-size: 0.9em;
+    text-align: center;
+}
